--- a/PetProject/Views/Query/Index.cshtml
+++ b/PetProject/Views/Query/Index.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@using PetProject.Models;
+﻿@using PetProject.Models;
 @using System.Collections.Generic;
 @using System.Data;
 @using System.Linq;
