--- a/PetProject/Views/Ratings/Index.cshtml
+++ b/PetProject/Views/Ratings/Index.cshtml
@@ -1,45 +1,41 @@
-﻿@model IEnumerable<DataLayer.Rating>
+﻿@using PetProject.Models;
+@using System.Collections.Generic;
+@using System.Data;
+@using System.Linq;
+@using System.Web;
+@model IList<result>
 
 @{
     ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
-
+<!--
 <p>
-    @Html.ActionLink("Create New", "Create")
+    
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.UserId)
+           
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
+           
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.RatingValue)
+         
         </th>
         <th></th>
     </tr>
+    -->
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedAt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RatingValue)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+<div name="list">
+    @foreach(var i in Model.Select(p=>p.songName)){
+        <a href="">@i</a>
 
-</table>
+
+    }
+
+
+</div>
+
