--- a/PetProject/Views/Query/Index.cshtml
+++ b/PetProject/Views/Query/Index.cshtml
@@ -14,8 +14,18 @@
 
 <h2>Index</h2>
 
+<audio controls="controls">
+    <source src="http://www.stephaniequinn.com/Music/Allegro%20from%20Duet%20in%20C%20Major.mp3" type="audio/mp3" />
+</audio>
 
 
+<audio controls="controls">
+    <source src="~/mp3/test1.mp3" type="audio/mpeg" />
+</audio>
+
+<audio controls="controls">
+    <source src="~/mp3/test1.mp3" type="audio/mpeg" />
+</audio>
 @{ 
     // foreach (var i in Model)
     //{
