--- a/PetProject/Views/Songs1/Edit.cshtml
+++ b/PetProject/Views/Songs1/Edit.cshtml
@@ -3,7 +3,9 @@
 @{
     ViewBag.Title = "Edit";
 }
-
+<audio controls="controls">
+    <source src="~/Views/Songs1/test1.mp3" type="audio/mpeg" />
+</audio>
 <h2>Edit</h2>
 
 @using (Html.BeginForm())
